# asctec_uav_msgs

./: CMakeLists.txt  README.md  eclipse-formatter.xml  package.xml
include/asctec_uav_msgs/: crc16.h  message_definitions.h  transport_definitions.h  vector_types.h
