<?xml version="1.0"?>
<package format="2">
  <name>trinity_msgs</name>
  <version>0.0.0</version>
  <description>
    Message definitions and tools to be used both on the companion computer and
    ground station to communicate with each other.
  </description>
  <url></url>
  <author>Andre Ryll</author>
  <author>Markus Achtelik</author>
  <maintainer email="andre.ryll@asctec.de">Andre Ryll</maintainer>
  <license>closed->BSD later?</license>

  <!-- Dependencies which this package needs to build itself. -->
  <buildtool_depend>catkin</buildtool_depend>
  <buildtool_depend>catkin_simple</buildtool_depend>
</package>
